--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,89 +1,158 @@
 {
-  
-  "home.latestUpdates": "Latest Updates",
-  "home.stayUpToDate": "Stay up to date with the latest changes and announcements",
-
-  
   "admin.accessDenied": "Access Denied",
+  "admin.actions": "Actions",
+  "admin.activeUsers": "Active Users",
+  "admin.analytics": "Analytics",
+  "admin.author": "Author",
+  "admin.ban": "Ban",
+  "admin.bannedUsers": "Banned Users",
+  "admin.delete": "Delete",
+  "admin.draft": "Draft",
+  "admin.email": "Email",
+  "admin.managePosts": "Manage Posts",
+  "admin.manageUsers": "Manage Users",
   "admin.noPermission": "You don't have permission to access this page.",
   "admin.panel": "Admin Panel",
-  "admin.users": "Users",
   "admin.posts": "Posts",
-  "admin.analytics": "Analytics",
-  "admin.manageUsers": "Manage Users",
-  "admin.managePosts": "Manage Posts",
-  "admin.totalUsers": "Total Users",
-  "admin.totalPosts": "Total Posts",
-  "admin.activeUsers": "Active Users",
-  "admin.bannedUsers": "Banned Users",
-  "admin.user": "User",
-  "admin.email": "Email",
-  "admin.role": "Role",
-  "admin.actions": "Actions",
-  "admin.title": "Title",
-  "admin.author": "Author",
-  "admin.status": "Status",
-  "admin.published": "Published",
-  "admin.draft": "Draft",
   "admin.promote": "Promote",
-  "admin.ban": "Ban",
+  "admin.published": "Published",
+  "admin.role": "Role",
+  "admin.status": "Status",
+  "admin.title": "Title",
+  "admin.totalPosts": "Total Posts",
+  "admin.totalUsers": "Total Users",
   "admin.unban": "Unban",
-  "admin.delete": "Delete",
-
-  "signin.welcomeBack": "Welcome back",
-  "signin.subtitle": "Sign in to your account to continue",
+  "admin.user": "User",
+  "admin.users": "Users",
+  "auth.continueWithGoogle": "Continue with Google",
+  "auth.email": "Email",
+  "auth.enterEmail": "Enter your email",
+  "auth.enterPassword": "Enter your password",
+  "auth.noAccount": "Don't have an account?",
+  "auth.orContinueWith": "Or continue with",
+  "auth.password": "Password",
+  "auth.signIn": "Sign In",
+  "auth.signUp": "Sign up",
+  "auth.signingIn": "Signing in...",
+  "auth.subtitle": "Sign in to your account to continue",
+  "auth.welcomeBack": "Welcome back",
+  "comments.delete": "Delete comment",
+  "comments.noComments": "No comments yet. Be the first to comment!",
+  "comments.noCommentsMessage": "No comments yet. Be the first to comment!",
+  "comments.placeholder": "Write a comment...",
+  "comments.post": "Post Comment",
+  "comments.posting": "Posting...",
+  "comments.title": "Comments",
+  "comments.write": "Write a comment...",
+  "explore.activeUsers": "Active Users",
+  "explore.checkBackLater": "Check back later for trending content!",
+  "explore.comments": "Comments",
+  "explore.interested": "Interested",
+  "explore.interestedDescription": "Posts you might be interested in",
+  "explore.latest": "Latest",
+  "explore.latestDescription": "Most recent posts",
+  "explore.noInterestedPosts": "No interested posts yet",
+  "explore.noLatestPosts": "No latest posts yet",
+  "explore.noTrendingPosts": "No trending posts yet",
+  "explore.noViralPosts": "No viral posts yet",
+  "explore.platformStats": "Platform Stats",
+  "explore.subtitle": "Discover trending content and viral posts",
+  "explore.title": "Explore",
+  "explore.topAuthors": "Top Authors",
+  "explore.totalLikes": "Total Likes",
+  "explore.totalPosts": "Total Posts",
+  "explore.trending": "Trending",
+  "explore.trendingDescription": "Currently trending posts",
+  "explore.trendingTags": "Trending Tags",
+  "explore.viral": "Viral",
+  "explore.viralDescription": "Most viral posts",
+  "general.error": "An error occurred",
+  "general.internalServerError": "Internal server error",
+  "general.unauthorized": "Unauthorized",
+  "header.adminDashboard": "Admin Dashboard",
+  "header.explore": "Explore",
+  "header.home": "Home",
+  "header.newPost": "New Post",
+  "header.nexblog": "NexBlog",
+  "header.notifications": "Notifications",
+  "header.profile": "Profile",
+  "header.searchPlaceholder": "Search by keywords or tags...",
+  "header.settings": "Settings",
+  "header.signIn": "Sign In",
+  "header.signOut": "Sign Out",
+  "header.signUp": "Sign Up",
+  "header.toggleTheme": "Toggle theme",
+  "home.latestUpdates": "Latest Updates",
+  "home.stayUpToDate": "Stay up to date with the latest changes and announcements",
+  "nav.explore": "Explore",
+  "nav.home": "Home",
+  "nav.notifications": "Notifications",
+  "nav.settings": "Settings",
+  "nav.signIn": "Sign In",
+  "nav.signOut": "Sign Out",
+  "nav.signUp": "Sign Up",
+  "notifications.markAllAsRead": "Mark all as read",
+  "notifications.noNotifications": "No notifications yet",
+  "notifications.noNotificationsMessage": "When you receive notifications, they'll appear here.",
+  "notifications.settings": "Settings",
+  "notifications.signInToView": "Sign in to view notifications",
+  "notifications.title": "Notifications",
+  "posts.author": "Author",
+  "posts.comments": "Comments",
+  "posts.draft": "Draft",
+  "posts.likes": "Likes",
+  "posts.noPosts": "No posts yet",
+  "posts.published": "Published",
+  "posts.title": "Posts",
+  "settings.dark": "Dark",
+  "settings.light": "Light",
+  "settings.system": "System",
+  "signin.continueWithGoogle": "Continue with Google",
   "signin.email": "Email",
-  "signin.password": "Password",
   "signin.enterEmail": "Enter your email",
   "signin.enterPassword": "Enter your password",
+  "signin.error.accountNotLinked": "This email is already associated with a different account.",
+  "signin.error.credentials": "Invalid email or password.",
+  "signin.error.default": "An error occurred during sign-in. Please try again.",
+  "signin.error.emailCreate": "Could not create account with email. Please try again.",
+  "signin.error.emailSignin": "Check your email for a sign-in link.",
+  "signin.error.generic": "An error occurred. Please try again.",
+  "signin.error.googleCallback": "There was an error completing the Google sign-in process.",
+  "signin.error.googleCancelled": "Google sign-in was cancelled or failed. Please try again.",
+  "signin.error.googleCreate": "Could not create account with Google. Please try again.",
+  "signin.error.googleGeneric": "An error occurred during Google sign-in. Please try again.",
+  "signin.error.googleStart": "There was an error starting the Google sign-in process.",
+  "signin.error.sessionRequired": "Please sign in to access this page.",
+  "signin.noAccount": "Don't have an account?",
+  "signin.orContinueWith": "Or continue with",
+  "signin.password": "Password",
   "signin.signIn": "Sign In",
   "signin.signingIn": "Signing in...",
-  "signin.orContinueWith": "Or continue with",
-  "signin.continueWithGoogle": "Continue with Google",
-  "signin.noAccount": "Don't have an account?",
   "signin.signUp": "Sign up",
-  "signin.error.googleCancelled": "Google sign-in was cancelled or failed. Please try again.",
-  "signin.error.googleStart": "There was an error starting the Google sign-in process.",
-  "signin.error.googleCallback": "There was an error completing the Google sign-in process.",
-  "signin.error.googleCreate": "Could not create account with Google. Please try again.",
-  "signin.error.emailCreate": "Could not create account with email. Please try again.",
-  "signin.error.accountNotLinked": "This email is already associated with a different account.",
-  "signin.error.emailSignin": "Check your email for a sign-in link.",
-  "signin.error.credentials": "Invalid email or password.",
-  "signin.error.sessionRequired": "Please sign in to access this page.",
-  "signin.error.default": "An error occurred during sign-in. Please try again.",
-  "signin.error.generic": "An error occurred. Please try again.",
-  "signin.error.googleGeneric": "An error occurred during Google sign-in. Please try again.",
-
-  "header.nexblog": "NexBlog",
-  "header.home": "Home",
-  "header.explore": "Explore",
-  "header.notifications": "Notifications",
-  "header.newPost": "New Post",
-  "header.profile": "Profile",
-  "header.settings": "Settings",
-  "header.adminDashboard": "Admin Dashboard",
-  "header.signOut": "Sign Out",
-  "header.signIn": "Sign In",
-  "header.signUp": "Sign Up",
-  "header.searchPlaceholder": "Search by keywords or tags...",
-  "header.toggleTheme": "Toggle theme",
-
-  "comments.write": "Write a comment...",
-  "comments.posting": "Posting...",
-  "comments.post": "Post Comment",
-  "comments.noComments": "No comments yet. Be the first to comment!",
-  "comments.delete": "Delete comment",
-
-  "upload.invalidType": "Invalid file type. Only JPEG, PNG, GIF, and WebP are allowed.",
-  "upload.tooLarge": "File too large. Maximum size is {maxSize}MB.",
+  "signin.subtitle": "Sign in to your account to continue",
+  "signin.welcomeBack": "Welcome back",
   "upload.failed": "Upload failed",
-  "upload.mustBeLoggedIn": "You must be logged in to upload files",
-  "upload.uploading": "Uploading...",
-  "upload.profilePicture": "Profile Picture",
   "upload.image": "Image",
-
-  "general.error": "An error occurred",
-  "general.unauthorized": "Unauthorized",
-  "general.internalServerError": "Internal server error"
+  "upload.invalidType": "Invalid file type. Only JPEG, PNG, GIF, and WebP are allowed.",
+  "upload.mustBeLoggedIn": "You must be logged in to upload files",
+  "upload.profilePicture": "Profile Picture",
+  "upload.tooLarge": "File too large. Maximum size is {maxSize}MB.",
+  "upload.uploading": "Uploading...",
+  "user.followers": "Followers",
+  "newPost.add": "Add",
+  "newPost.addTag": "Add a tag...",
+  "newPost.addTagsHelp": "Add tags to help others discover your post",
+  "newPost.cancel": "Cancel",
+  "newPost.content": "Content",
+  "newPost.contentPlaceholder": "Write your post content here...",
+  "newPost.createNewPost": "Create New Post",
+  "newPost.featuredImage": "Featured Image (Optional)",
+  "newPost.featuredImageHelp": "Add a featured image to make your post more engaging",
+  "newPost.publishPost": "Publish Post",
+  "newPost.publishing": "Publishing...",
+  "newPost.removeImage": "Remove Image",
+  "newPost.shareThoughts": "Share your thoughts and ideas with the community",
+  "newPost.title": "Title",
+  "newPost.titlePlaceholder": "Enter your post title",
+  "newPost.uploadFeaturedImage": "Upload Featured Image"
 }
