feat: enhance localization files with additional translations for authentication, comments, exploration, navigation, and new post features in German, Spanish, French, and English

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -24,11 +24,48 @@
   "admin.unban": "Entsperren",
   "admin.user": "Benutzer",
   "admin.users": "Benutzer",
+  "auth.continueWithGoogle": "Mit Google fortfahren",
+  "auth.email": "E-Mail",
+  "auth.enterEmail": "Geben Sie Ihre E-Mail ein",
+  "auth.enterPassword": "Geben Sie Ihr Passwort ein",
+  "auth.noAccount": "Haben Sie kein Konto?",
+  "auth.orContinueWith": "Oder fortfahren mit",
+  "auth.password": "Passwort",
+  "auth.signIn": "Anmelden",
+  "auth.signingIn": "Anmelden...",
+  "auth.signUp": "Registrieren",
+  "auth.subtitle": "Melden Sie sich bei Ihrem Konto an, um fortzufahren",
+  "auth.welcomeBack": "Willkommen zurück",
   "comments.delete": "Kommentar löschen",
   "comments.noComments": "Noch keine Kommentare. Seien Sie der Erste, der kommentiert!",
+  "comments.noCommentsMessage": "Noch keine Kommentare. Seien Sie der Erste, der kommentiert!",
+  "comments.placeholder": "Kommentar schreiben...",
   "comments.post": "Kommentar posten",
   "comments.posting": "Veröffentlichen...",
+  "comments.title": "Kommentare",
   "comments.write": "Kommentar schreiben...",
+  "explore.activeUsers": "Aktive Benutzer",
+  "explore.checkBackLater": "Schauen Sie später wieder vorbei für trendige Inhalte!",
+  "explore.comments": "Kommentare",
+  "explore.interested": "Interessiert",
+  "explore.interestedDescription": "Beiträge, die Sie interessieren könnten",
+  "explore.latest": "Neueste",
+  "explore.latestDescription": "Neueste Beiträge",
+  "explore.noInterestedPosts": "Noch keine interessanten Beiträge",
+  "explore.noLatestPosts": "Noch keine neuesten Beiträge",
+  "explore.noTrendingPosts": "Noch keine Trend-Beiträge",
+  "explore.noViralPosts": "Noch keine viralen Beiträge",
+  "explore.platformStats": "Plattform Statistiken",
+  "explore.subtitle": "Entdecke angesagte Inhalte und virale Beiträge",
+  "explore.title": "Entdecken",
+  "explore.topAuthors": "Top-Autoren",
+  "explore.totalLikes": "Gesamtanzahl der Likes",
+  "explore.totalPosts": "Gesamtanzahl der Beiträge",
+  "explore.trending": "Trend",
+  "explore.trendingDescription": "Derzeit angesagte Beiträge",
+  "explore.trendingTags": "Trendige Tags",
+  "explore.viral": "Viral",
+  "explore.viralDescription": "Meist virale Beiträge",
   "general.error": "Ein Fehler ist aufgetreten",
   "general.internalServerError": "Interner Serverfehler",
   "general.unauthorized": "Unbefugt",
@@ -47,6 +84,45 @@
   "header.toggleTheme": "Thema umschalten",
   "home.latestUpdates": "Neueste Aktualisierungen",
   "home.stayUpToDate": "Bleiben Sie auf dem Laufenden über die neuesten Änderungen und Ankündigungen",
+  "nav.explore": "Entdecken",
+  "nav.home": "Startseite",
+  "nav.notifications": "Benachrichtigungen",
+  "nav.settings": "Einstellungen",
+  "nav.signIn": "Anmelden",
+  "nav.signOut": "Abmelden",
+  "nav.signUp": "Registrieren",
+  "newPost.add": "Hinzufügen",
+  "newPost.addTag": "Tag hinzufügen...",
+  "newPost.addTagsHelp": "Fügen Sie Tags hinzu, damit andere Ihren Beitrag entdecken können",
+  "newPost.cancel": "Abbrechen",
+  "newPost.content": "Inhalt",
+  "newPost.contentPlaceholder": "Schreiben Sie hier den Inhalt Ihres Beitrags...",
+  "newPost.createNewPost": "Neuen Beitrag erstellen",
+  "newPost.featuredImage": "Hervorgehobenes Bild (optional)",
+  "newPost.featuredImageHelp": "Fügen Sie ein Titelbild hinzu, um Ihren Beitrag attraktiver zu gestalten",
+  "newPost.publishing": "Veröffentlichen...",
+  "newPost.publishPost": "Beitrag veröffentlichen",
+  "newPost.removeImage": "Bild entfernen",
+  "newPost.shareThoughts": "Teile deine Gedanken und Ideen mit der Community",
+  "newPost.title": "Titel",
+  "newPost.titlePlaceholder": "Geben Sie Ihren Beitragstitel ein",
+  "newPost.uploadFeaturedImage": "Hervorgehobenes Bild hochladen",
+  "notifications.markAllAsRead": "Alle als gelesen markieren",
+  "notifications.noNotifications": "Noch keine Benachrichtigungen",
+  "notifications.noNotificationsMessage": "Wenn Sie Benachrichtigungen erhalten, werden diese hier angezeigt.",
+  "notifications.settings": "Einstellungen",
+  "notifications.signInToView": "Anmelden, um Benachrichtigungen anzusehen",
+  "notifications.title": "Benachrichtigungen",
+  "posts.author": "Autor",
+  "posts.comments": "Kommentare",
+  "posts.draft": "Entwurf",
+  "posts.likes": "Likes",
+  "posts.noPosts": "Noch keine Beiträge",
+  "posts.published": "Veröffentlicht",
+  "posts.title": "Titel der Beiträge",
+  "settings.dark": "Dunkel",
+  "settings.light": "Hell",
+  "settings.system": "System",
   "signin.continueWithGoogle": "Mit Google fortfahren",
   "signin.email": "E-Mail",
   "signin.enterEmail": "Geben Sie Ihre E-Mail ein",
@@ -77,5 +153,6 @@
   "upload.mustBeLoggedIn": "Sie müssen eingeloggt sein, um Dateien hochzuladen",
   "upload.profilePicture": "Profilbild",
   "upload.tooLarge": "Datei zu groß. Maximalgröße ist {maxSize}MB.",
-  "upload.uploading": "Hochladen..."
+  "upload.uploading": "Hochladen...",
+  "user.followers": "Follower"
 }
