--- a/i18n/en.json
+++ b/i18n/en.json
@@ -24,6 +24,31 @@
   "admin.unban": "Unban",
   "admin.user": "User",
   "admin.users": "Users",
+  "admin.activity": "Activity",
+  "admin.active": "Active",
+  "admin.banned": "Banned",
+  "admin.banUser": "Ban User",
+  "admin.unbanUser": "Unban User",
+  "admin.deleteUser": "Delete User",
+  "admin.promoteToAdmin": "Promote to Admin",
+  "admin.demoteFromAdmin": "Demote from Admin",
+  "admin.overview": "Overview",
+  "admin.dashboard": "Admin Dashboard",
+  "admin.quickActions": "Quick Actions",
+  "admin.manageUsersDesc": "Manage user accounts and permissions",
+  "admin.managePostsDesc": "Review and moderate posts",
+  "admin.viewAnalytics": "View Analytics",
+  "admin.viewAnalyticsDesc": "Monitor platform statistics and trends",
+  "admin.engagement": "Engagement",
+  "admin.engagementRate": "Engagement Rate",
+  "admin.postsPerUser": "Posts per User",
+  "admin.topUsers": "Top Users",
+  "admin.topPosts": "Top Posts",
+  "admin.approvePost": "Approve Post",
+  "admin.rejectPost": "Reject Post",
+  "admin.deletePost": "Delete Post",
+  "admin.error.fetchingData": "Error fetching data",
+  "admin.error.actionFailed": "Action failed",
   "auth.continueWithGoogle": "Continue with Google",
   "auth.email": "Email",
   "auth.enterEmail": "Enter your email",
@@ -44,6 +69,7 @@
   "comments.posting": "Posting...",
   "comments.title": "Comments",
   "comments.write": "Write a comment...",
+  "common.loading": "Loading...",
   "explore.activeUsers": "Active Users",
   "explore.checkBackLater": "Check back later for trending content!",
   "explore.comments": "Comments",
@@ -69,6 +95,13 @@
   "general.error": "An error occurred",
   "general.internalServerError": "Internal server error",
   "general.unauthorized": "Unauthorized",
+  "general.title": "Title",
+  "general.user": "User",
+  "general.email": "Email",
+  "general.role": "Role",
+  "general.status": "Status",
+  "general.actions": "Actions",
+  "general.createdAt": "Created At",
   "header.adminDashboard": "Admin Dashboard",
   "header.explore": "Explore",
   "header.home": "Home",
@@ -91,6 +124,22 @@
   "nav.signIn": "Sign In",
   "nav.signOut": "Sign Out",
   "nav.signUp": "Sign Up",
+  "newPost.add": "Add",
+  "newPost.addTag": "Add a tag...",
+  "newPost.addTagsHelp": "Add tags to help others discover your post",
+  "newPost.cancel": "Cancel",
+  "newPost.content": "Content",
+  "newPost.contentPlaceholder": "Write your post content here...",
+  "newPost.createNewPost": "Create New Post",
+  "newPost.featuredImage": "Featured Image (Optional)",
+  "newPost.featuredImageHelp": "Add a featured image to make your post more engaging",
+  "newPost.publishPost": "Publish Post",
+  "newPost.publishing": "Publishing...",
+  "newPost.removeImage": "Remove Image",
+  "newPost.shareThoughts": "Share your thoughts and ideas with the community",
+  "newPost.title": "Title",
+  "newPost.titlePlaceholder": "Enter your post title",
+  "newPost.uploadFeaturedImage": "Upload Featured Image",
   "notifications.markAllAsRead": "Mark all as read",
   "notifications.noNotifications": "No notifications yet",
   "notifications.noNotificationsMessage": "When you receive notifications, they'll appear here.",
@@ -104,9 +153,33 @@
   "posts.noPosts": "No posts yet",
   "posts.published": "Published",
   "posts.title": "Posts",
-  "settings.dark": "Dark",
+  "search.results": "Search Results",
+  "search.showingResults": "Showing results for",
+  "search.noResults": "No results found",
+  "search.tryDifferentKeywords": "Try searching with different keywords or tags.",
+  "settings.title": "Settings",
+  "settings.subtitle": "Manage your account settings and preferences",
+  "settings.displayName": "Display Name",
+  "settings.displayNamePlaceholder": "Enter your display name",
+  "settings.emailAddress": "Email Address",
+  "settings.emailAddressPlaceholder": "Enter your email address",
+  "settings.profilePicture": "Profile Picture",
+  "settings.uploadProfilePicture": "Upload Profile Picture",
+  "settings.remove": "Remove",
+  "settings.profilePictureHelp": "Upload a profile picture or leave empty to use your default avatar",
+  "settings.saving": "Saving...",
+  "settings.saveChanges": "Save Changes",
+  "settings.appearance": "Appearance",
+  "settings.theme": "Theme",
   "settings.light": "Light",
+  "settings.dark": "Dark",
   "settings.system": "System",
+  "settings.language": "Language",
+  "settings.accountActions": "Account Actions",
+  "settings.changePassword": "Change Password",
+  "settings.deleteAccount": "Delete Account",
+  "settings.settingsUpdated": "Settings updated successfully!",
+  "settings.failedToUpdate": "Failed to update settings",
   "signin.continueWithGoogle": "Continue with Google",
   "signin.email": "Email",
   "signin.enterEmail": "Enter your email",
@@ -139,20 +212,11 @@
   "upload.tooLarge": "File too large. Maximum size is {maxSize}MB.",
   "upload.uploading": "Uploading...",
   "user.followers": "Followers",
-  "newPost.add": "Add",
-  "newPost.addTag": "Add a tag...",
-  "newPost.addTagsHelp": "Add tags to help others discover your post",
-  "newPost.cancel": "Cancel",
-  "newPost.content": "Content",
-  "newPost.contentPlaceholder": "Write your post content here...",
-  "newPost.createNewPost": "Create New Post",
-  "newPost.featuredImage": "Featured Image (Optional)",
-  "newPost.featuredImageHelp": "Add a featured image to make your post more engaging",
-  "newPost.publishPost": "Publish Post",
-  "newPost.publishing": "Publishing...",
-  "newPost.removeImage": "Remove Image",
-  "newPost.shareThoughts": "Share your thoughts and ideas with the community",
-  "newPost.title": "Title",
-  "newPost.titlePlaceholder": "Enter your post title",
-  "newPost.uploadFeaturedImage": "Upload Featured Image"
+  "user.profile": "Profile",
+  "user.memberSince": "Member since",
+  "user.postsBy": "Posts by",
+  "user.noPostsYet": "No posts yet",
+  "user.hasntPublished": "hasn't published any posts yet.",
+  "user.anonymousUser": "Anonymous User",
+  "user.readMore": "Read more →"
 }
