--- a/i18n/es.json
+++ b/i18n/es.json
@@ -24,11 +24,48 @@
   "admin.unban": "Desbanear",
   "admin.user": "Usuario",
   "admin.users": "Usuarios",
+  "auth.continueWithGoogle": "Continuar con Google",
+  "auth.email": "Correo electrónico",
+  "auth.enterEmail": "Introduce tu correo electrónico",
+  "auth.enterPassword": "Ingresa tu contraseña",
+  "auth.noAccount": "¿No tienes una cuenta?",
+  "auth.orContinueWith": "O continuar con",
+  "auth.password": "Contraseña",
+  "auth.signIn": "Iniciar sesión",
+  "auth.signingIn": "Iniciando sesión...",
+  "auth.signUp": "Registrarse",
+  "auth.subtitle": "Inicia sesión en tu cuenta para continuar",
+  "auth.welcomeBack": "Bienvenido de nuevo",
   "comments.delete": "Eliminar comentario",
   "comments.noComments": "Aún no hay comentarios. ¡Sé el primero en comentar!",
+  "comments.noCommentsMessage": "Aún no hay comentarios. ¡Sé el primero en comentar!",
+  "comments.placeholder": "Escribe un comentario...",
   "comments.post": "Publicar comentario",
   "comments.posting": "Publicando...",
+  "comments.title": "Comentarios",
   "comments.write": "Escribe un comentario...",
+  "explore.activeUsers": "Usuarios Activos",
+  "explore.checkBackLater": "¡Vuelve más tarde para contenido de tendencias!",
+  "explore.comments": "Comentarios",
+  "explore.interested": "Interesado",
+  "explore.interestedDescription": "Publicaciones que podrían interesarte",
+  "explore.latest": "Último",
+  "explore.latestDescription": "Publicaciones más recientes",
+  "explore.noInterestedPosts": "Ningunas publicaciones de interés todavía",
+  "explore.noLatestPosts": "No hay últimas publicaciones todavía",
+  "explore.noTrendingPosts": "No hay publicaciones de tendencia todavía",
+  "explore.noViralPosts": "No hay publicaciones virales todavía",
+  "explore.platformStats": "Estadísticas de la Plataforma",
+  "explore.subtitle": "Descubre contenido de tendencia y publicaciones virales",
+  "explore.title": "Explorar",
+  "explore.topAuthors": "Autores Principales",
+  "explore.totalLikes": "Me gusta totales",
+  "explore.totalPosts": "Total de Publicaciones",
+  "explore.trending": "Tendencias",
+  "explore.trendingDescription": "Publicaciones de actualidad",
+  "explore.trendingTags": "Etiquetas de tendencia",
+  "explore.viral": "Viral",
+  "explore.viralDescription": "Publicaciones más virales",
   "general.error": "Ocurrió un error",
   "general.internalServerError": "Error interno del servidor",
   "general.unauthorized": "No autorizado",
@@ -47,6 +84,45 @@
   "header.toggleTheme": "Cambiar tema",
   "home.latestUpdates": "Últimas Actualizaciones",
   "home.stayUpToDate": "Mantente al día con los últimos cambios y anuncios",
+  "nav.explore": "Explorar",
+  "nav.home": "Inicio",
+  "nav.notifications": "Notificaciones",
+  "nav.settings": "Configuración",
+  "nav.signIn": "Iniciar sesión",
+  "nav.signOut": "Cerrar sesión",
+  "nav.signUp": "Registrarse",
+  "newPost.add": "Agregar",
+  "newPost.addTag": "Añadir una etiqueta...",
+  "newPost.addTagsHelp": "Añade etiquetas para ayudar a otros a descubrir tu publicación",
+  "newPost.cancel": "Cancelar",
+  "newPost.content": "Contenido",
+  "newPost.contentPlaceholder": "Escribe el contenido de tu publicación aquí...",
+  "newPost.createNewPost": "Crear Nueva Publicación",
+  "newPost.featuredImage": "Imagen destacada (Opcional)",
+  "newPost.featuredImageHelp": "Agrega una imagen destacada para hacer tu publicación más atractiva",
+  "newPost.publishing": "Publicando...",
+  "newPost.publishPost": "Publicar Publicación",
+  "newPost.removeImage": "Eliminar Imagen",
+  "newPost.shareThoughts": "Comparte tus pensamientos e ideas con la comunidad",
+  "newPost.title": "Título",
+  "newPost.titlePlaceholder": "Introduce el título de tu publicación",
+  "newPost.uploadFeaturedImage": "Subir imagen destacada",
+  "notifications.markAllAsRead": "Marcar todo como leído",
+  "notifications.noNotifications": "Aún no hay notificaciones",
+  "notifications.noNotificationsMessage": "Cuando recibas notificaciones, aparecerán aquí.",
+  "notifications.settings": "Configuración",
+  "notifications.signInToView": "Inicia sesión para ver las notificaciones",
+  "notifications.title": "Notificaciones",
+  "posts.author": "Autor",
+  "posts.comments": "Comentarios",
+  "posts.draft": "Borrador",
+  "posts.likes": "Me gusta",
+  "posts.noPosts": "No hay publicaciones todavía",
+  "posts.published": "Publicado",
+  "posts.title": "Publicaciones",
+  "settings.dark": "Oscuro",
+  "settings.light": "Luz",
+  "settings.system": "Sistema",
   "signin.continueWithGoogle": "Continuar con Google",
   "signin.email": "Correo electrónico",
   "signin.enterEmail": "Escribe tu correo electrónico",
@@ -77,5 +153,6 @@
   "upload.mustBeLoggedIn": "Debes estar conectado para subir archivos",
   "upload.profilePicture": "Imagen de Perfil",
   "upload.tooLarge": "Archivo demasiado grande. El tamaño máximo es de {maxSize}MB.",
-  "upload.uploading": "Cargando..."
+  "upload.uploading": "Cargando...",
+  "user.followers": "Seguidores"
 }
