--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -24,11 +24,48 @@
   "admin.unban": "Débannir",
   "admin.user": "Utilisateur",
   "admin.users": "Utilisateurs",
+  "auth.continueWithGoogle": "Continuer avec Google",
+  "auth.email": "E-mail",
+  "auth.enterEmail": "Entrez votre e-mail",
+  "auth.enterPassword": "Entrez votre mot de passe",
+  "auth.noAccount": "Pas de compte ?",
+  "auth.orContinueWith": "Ou continuer avec",
+  "auth.password": "Mot de passe",
+  "auth.signIn": "Se connecter",
+  "auth.signingIn": "Connexion en cours...",
+  "auth.signUp": "S'inscrire",
+  "auth.subtitle": "Connectez-vous à votre compte pour continuer",
+  "auth.welcomeBack": "Bienvenue",
   "comments.delete": "Supprimer le commentaire",
   "comments.noComments": "Pas de commentaires pour le moment. Soyez le premier à commenter!",
+  "comments.noCommentsMessage": "Pas de commentaires pour le moment. Soyez le premier à commenter!",
+  "comments.placeholder": "Écrire un commentaire...",
   "comments.post": "Publier un commentaire",
   "comments.posting": "Publication...",
+  "comments.title": "Commentaires",
   "comments.write": "Écrire un commentaire...",
+  "explore.activeUsers": "Utilisateurs actifs",
+  "explore.checkBackLater": "Revenez plus tard pour le contenu tendance !",
+  "explore.comments": "Commentaires",
+  "explore.interested": "Intéressé",
+  "explore.interestedDescription": "Publications susceptibles de vous intéresser",
+  "explore.latest": "Dernières",
+  "explore.latestDescription": "Most recent posts in French",
+  "explore.noInterestedPosts": "Aucun message intéressé pour le moment",
+  "explore.noLatestPosts": "Aucun dernier message pour le moment",
+  "explore.noTrendingPosts": "Aucun contenu en vogue pour le moment",
+  "explore.noViralPosts": "Pas de publications virales pour le moment",
+  "explore.platformStats": "Statistiques de la Plateforme",
+  "explore.subtitle": "Découvrez du contenu tendance et des publications virales",
+  "explore.title": "Explorer",
+  "explore.topAuthors": "Auteurs principaux",
+  "explore.totalLikes": "Total J'aime",
+  "explore.totalPosts": "Total des publications",
+  "explore.trending": "Tendance",
+  "explore.trendingDescription": "Publications actuellement populaires",
+  "explore.trendingTags": "Tags Tendance",
+  "explore.viral": "Virale",
+  "explore.viralDescription": "Publications les plus virales",
   "general.error": "Une erreur s'est produite",
   "general.internalServerError": "Erreur de serveur interne",
   "general.unauthorized": "Non autorisé",
@@ -47,6 +84,45 @@
   "header.toggleTheme": "Changer le thème",
   "home.latestUpdates": "Dernières mises à jour",
   "home.stayUpToDate": "Restez à jour avec les dernières modifications et annonces",
+  "nav.explore": "Explorer",
+  "nav.home": "Accueil",
+  "nav.notifications": "Notifications",
+  "nav.settings": "Paramètres",
+  "nav.signIn": "Se connecter",
+  "nav.signOut": "Déconnexion",
+  "nav.signUp": "S'inscrire",
+  "newPost.add": "Ajouter",
+  "newPost.addTag": "Ajouter un tag...",
+  "newPost.addTagsHelp": "Ajouter des tags pour aider les autres à découvrir votre publication",
+  "newPost.cancel": "Annuler",
+  "newPost.content": "Contenu",
+  "newPost.contentPlaceholder": "Écrivez le contenu de votre publication ici...",
+  "newPost.createNewPost": "Créer Nouveau Message",
+  "newPost.featuredImage": "Image en vedette (facultatif)",
+  "newPost.featuredImageHelp": "Ajoutez une image mise en avant pour rendre votre publication plus attrayante",
+  "newPost.publishing": "Publication...",
+  "newPost.publishPost": "Publier l'article",
+  "newPost.removeImage": "Supprimer l'image",
+  "newPost.shareThoughts": "Partagez vos pensées et idées avec la communauté",
+  "newPost.title": "Titre",
+  "newPost.titlePlaceholder": "Entrez le titre de votre publication",
+  "newPost.uploadFeaturedImage": "Télécharger l'image à la une",
+  "notifications.markAllAsRead": "Marquer tout comme lu",
+  "notifications.noNotifications": "Aucune notification pour le moment",
+  "notifications.noNotificationsMessage": "Lorsque vous recevez des notifications, elles s'afficheront ici.",
+  "notifications.settings": "Paramètres",
+  "notifications.signInToView": "Connectez-vous pour voir les notifications",
+  "notifications.title": "Notifications",
+  "posts.author": "Auteur",
+  "posts.comments": "Commentaires",
+  "posts.draft": "Brouillon",
+  "posts.likes": "J'aime",
+  "posts.noPosts": "Aucun message pour le moment",
+  "posts.published": "Publié",
+  "posts.title": "Publications",
+  "settings.dark": "Sombre",
+  "settings.light": "Lumière",
+  "settings.system": "Système",
   "signin.continueWithGoogle": "Continuer avec Google",
   "signin.email": "E-mail",
   "signin.enterEmail": "Entrez votre e-mail",
@@ -77,5 +153,6 @@
   "upload.mustBeLoggedIn": "Vous devez être connecté pour télécharger des fichiers",
   "upload.profilePicture": "Photo de profil",
   "upload.tooLarge": "Fichier trop volumineux. La taille maximale est de {maxSize}MB.",
-  "upload.uploading": "Téléchargement..."
+  "upload.uploading": "Téléchargement...",
+  "user.followers": "Abonnés"
 }
